<resources>
    <string name="app_name">aX360e Free</string>
    <string name="create_shortcut">Create Shortcut</string>
    <string name="disable_virtual_keyboard">Disable the virtual keyboard</string>
    <string name="joystick">Joystick</string>
    <string name="dpad">Dpad</string>
    <string name="abxy">ABXY</string>
    <string name="lr">LR</string>
    <string name="start_back">Start/Back</string>
    <string name="save_and_quit">Save &amp; Quit</string>
    <string name="scale_rate">Scale Rate</string>
    <string name="refresh_list">Refresh List</string>
    <string name="about">About</string>
    <string name="gratitude">Gratitude</string>
    <string name="update_log">Update Log</string>
    <string name="device_info">Device Info</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="open_file_manager">Open File Manager</string>
    <string name="game_list_loading">The game list is loading...</string>
    <string name="quit">Quit</string>
    <string name="device_unsupport_vulkan_msg">Your device does not support Vulkan and cannot meet the minimum requirements to run this application, please exit.</string>
    <string name="loading">Loading...</string>
    <string name="msg_processing">Processing...</string>
    <string name="empty_game_list">The list of games is empty,  please setting the game directory</string>
    <string name="enable_vibrator">Enable Vibrator</string>
    <string name="set_game_dir">Set Game Directory</string>
    <string name="clear">Clear</string>
    <string name="press_a_key">Press any key to continue...</string>
    <string name="reset_as_default">Reset as Default</string>
    <string name="key_mappers">Key Mappers</string>
    <string name="virtual_pad_edit">VirtualPadEdit</string>
    <string name="left">left</string>
    <string name="up">up</string>
    <string name="right">right</string>
    <string name="down">down</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="lshoulder">LShoulder</string>
    <string name="lthumbpress">LThumbPress</string>
    <string name="ltrigger">LTrigger</string>
    <string name="rshoulder">RShoulder</string>
    <string name="rthumbpress">RThumbPress</string>
    <string name="rtrigger">RTrigger</string>
    <string name="start">start</string>
    <string name="back">Back</string>
    <string name="use_global_config">Use Global Config</string>
    <string name="settings">Settings</string>
    <string name="gratitude_content">Thanks Ruban for all the ICONS\n\n
		Thanks to SRC267 (Sting) for managing reddit/discord\n\n
		Thanks to 妖妖 for test\n\n
		Thanks to 再见某人 \n\n
        Thanks to 再见某人 \n\n
        Thanks to 再见某人 \n\n
        \n\n
        		Based on the Xenia transplantation optimization, thanks to all the participants of the Xenia project\n\n
    </string>
    <string name="es_apu">APU</string>
    <string name="es_apu_apu">Audio System</string>
    <string name="es_apu_apu_max_queued_frames">Max Queued Frames</string>
    <string name="es_apu_enable_xmp">Enable Music Player</string>
    <string name="es_apu_ffmpeg_verbose">FFmpeg Verbose Output</string>
    <string name="es_apu_mute">Mute All Audio</string>
    <string name="es_apu_use_dedicated_xma_thread">Dedicated XMA Thread</string>
    <string name="es_apu_use_new_decoder">Use New XMA Decoder</string>
    <string name="es_apu_xmp_default_volume">Default Music Volume</string>
    <string name="es_cpu">CPU</string>
    <string name="es_cpu_break_condition_gpr">Break Condition GPR</string>
    <string name="es_cpu_break_condition_op">Break Condition Operator</string>
    <string name="es_cpu_break_condition_truncate">Truncate Value to 32-bits</string>
    <string name="es_cpu_break_condition_value">Break Condition Value</string>
    <string name="es_cpu_break_on_debugbreak">Break on Debugbreak</string>
    <string name="es_cpu_break_on_instruction">Break on Instruction</string>
    <string name="es_cpu_break_on_start">Break on Start</string>
    <string name="es_cpu_break_on_unimplemented_instructions">Break on Unimplemented Instructions</string>
    <string name="es_cpu_clock_no_scaling">Disable Clock Scaling</string>
    <string name="es_cpu_clock_source_raw">Use Raw Clock Source</string>
    <string name="es_cpu_cpu">CPU Backend</string>
    <string name="es_cpu_debugprint_trap_log">Log Debugprint Traps</string>
    <string name="es_cpu_disable_global_lock">Disable Global Lock</string>
    <string name="es_cpu_disassemble_functions">Disassemble Functions</string>
    <string name="es_cpu_ignore_undefined_externs">Ignore Undefined Externs</string>
    <string name="es_cpu_inline_mmio_access">Inline MMIO Access</string>
    <string name="es_cpu_load_module_map">Load Module Map</string>
    <string name="es_cpu_pvr">Processor Version/Revision</string>
    <string name="es_cpu_store_all_context_values">Store All Context Values</string>
    <string name="es_cpu_trace_function_coverage">Trace Function Coverage</string>
    <string name="es_cpu_trace_function_data">Trace Function Data</string>
    <string name="es_cpu_trace_function_data_path">Function Data Trace Path</string>
    <string name="es_cpu_trace_function_references">Trace Function References</string>
    <string name="es_cpu_trace_functions">Trace Functions</string>
    <string name="es_cpu_validate_hir">Validate HIR</string>
    <string name="es_content">Content</string>
    <string name="es_content_license_mask">License Mask</string>
    <string name="es_display">Display</string>
    <string name="es_display_fullscreen">Fullscreen Mode</string>
    <string name="es_display_host_present_from_non_ui_thread">Direct Presentation from Non-UI Thread</string>
    <string name="es_display_postprocess_antialiasing">Post-process Anti-aliasing</string>
    <string name="es_display_postprocess_dither">Post-process Dithering</string>
    <string name="es_display_postprocess_ffx_cas_additional_sharpness">CAS Additional Sharpness</string>
    <string name="es_display_postprocess_ffx_fsr_max_upsampling_passes">FSR Max Upsampling Passes</string>
    <string name="es_display_postprocess_ffx_fsr_sharpness_reduction">FSR Sharpness Reduction</string>
    <string name="es_display_postprocess_scaling_and_sharpening">Scaling and Sharpening</string>
    <string name="es_display_present_letterbox">Letterbox Presentation</string>
    <string name="es_display_present_render_pass_clear">Clear Render Pass</string>
    <string name="es_display_present_safe_area_x">Safe Area X</string>
    <string name="es_display_present_safe_area_y">Safe Area Y</string>
    <string name="es_gpu">GPU</string>
    <string name="es_gpu_clear_memory_page_state">Clear Memory Page State</string>
    <string name="es_gpu_depth_float24_convert_in_pixel_shader">Convert Depth in Pixel Shader</string>
    <string name="es_gpu_depth_float24_round">Round Depth Conversion</string>
    <string name="es_gpu_depth_transfer_not_equal_test">Depth Transfer Not Equal Test</string>
    <string name="es_gpu_disassemble_pm4">Disassemble PM4 Packets</string>
    <string name="es_gpu_draw_resolution_scale_x">Draw Resolution Scale X</string>
    <string name="es_gpu_draw_resolution_scale_y">Draw Resolution Scale Y</string>
    <string name="es_gpu_draw_resolution_scaled_texture_offsets">Scaled Texture Offsets</string>
    <string name="es_gpu_dump_shaders">Dump Shaders Path</string>
    <string name="es_gpu_execute_unclipped_draw_vs_on_cpu">Execute VS on CPU for Unclipped Draws</string>
    <string name="es_gpu_execute_unclipped_draw_vs_on_cpu_for_psi_render_backend">Execute VS on CPU for PSI Backend</string>
    <string name="es_gpu_execute_unclipped_draw_vs_on_cpu_with_scissor">Execute VS on CPU with Scissor</string>
    <string name="es_gpu_force_convert_line_loops_to_strips">Force Convert Line Loops</string>
    <string name="es_gpu_force_convert_quad_lists_to_triangle_lists">Force Convert Quad Lists</string>
    <string name="es_gpu_force_convert_triangle_fans_to_lists">Force Convert Triangle Fans</string>
    <string name="es_gpu_framerate_limit">Framerate Limit</string>
    <string name="es_gpu_gamma_render_target_as_srgb">Gamma RT as sRGB</string>
    <string name="es_gpu_gpu">Graphics System</string>
    <string name="es_gpu_gpu_allow_invalid_fetch_constants">Allow Invalid Fetch Constants</string>
    <string name="es_gpu_half_pixel_offset">Half Pixel Offset</string>
    <string name="es_gpu_ignore_32bit_vertex_index_support">Ignore 32-bit Vertex Index Support</string>
    <string name="es_gpu_log_guest_driven_gpu_register_written_values">Log GPU Register Writes</string>
    <string name="es_gpu_log_ringbuffer_kickoff_initiator_bts">Log Ringbuffer Kickoff</string>
    <string name="es_gpu_mrt_edram_used_range_clamp_to_min">MRT EDRAM Clamp to Min</string>
    <string name="es_gpu_native_2x_msaa">Native 2x MSAA</string>
    <string name="es_gpu_native_stencil_value_output">Native Stencil Value Output</string>
    <string name="es_gpu_non_seamless_cube_map">Non-seamless Cube Map</string>
    <string name="es_gpu_primitive_processor_cache_min_indices">Primitive Cache Min Indices</string>
    <string name="es_gpu_query_occlusion_sample_lower_threshold">Occlusion Sample Lower Threshold</string>
    <string name="es_gpu_query_occlusion_sample_upper_threshold">Occlusion Sample Upper Threshold</string>
    <string name="es_gpu_readback_memexport">Readback Memexport</string>
    <string name="es_gpu_readback_resolve">Readback Resolve</string>
    <string name="es_gpu_render_target_path_vulkan">Render Target Path (Vulkan)</string>
    <string name="es_gpu_resolve_resolution_scale_fill_half_pixel_offset">Resolve Scale Fill Half Pixel Offset</string>
    <string name="es_gpu_snorm16_render_target_full_range">SNORM16 RT Full Range</string>
    <string name="es_gpu_store_shaders">Store Shaders</string>
    <string name="es_gpu_texture_cache_memory_limit_hard">Texture Cache Hard Limit</string>
    <string name="es_gpu_texture_cache_memory_limit_render_to_texture">Texture Cache RTT Limit</string>
    <string name="es_gpu_texture_cache_memory_limit_soft">Texture Cache Soft Limit</string>
    <string name="es_gpu_texture_cache_memory_limit_soft_lifetime">Texture Cache Soft Lifetime</string>
    <string name="es_gpu_trace_gpu_prefix">GPU Trace Prefix</string>
    <string name="es_gpu_trace_gpu_stream">Trace GPU Stream</string>
    <string name="es_gpu_vsync">VSYNC</string>
    <string name="es_general">General</string>
    <string name="es_general_allow_plugins">Allow Plugins</string>
    <string name="es_general_apply_patches">Apply Patches</string>
    <string name="es_general_debug">Debug Mode</string>
    <string name="es_general_discord">Discord Rich Presence</string>
    <string name="es_general_launch_module">Launch Module</string>
    <string name="es_general_notification_sound_path">Notification Sound Path</string>
    <string name="es_general_time_scalar">Time Scalar</string>
    <string name="es_hid">HID</string>
    <string name="es_hid_hid">Input System</string>
    <string name="es_hid_left_stick_deadzone_percentage">Left Stick Deadzone</string>
    <string name="es_hid_right_stick_deadzone_percentage">Right Stick Deadzone</string>
    <string name="es_hid_vibration">Controller Vibration</string>
    <string name="es_kernel">Kernel</string>
    <string name="es_kernel_allow_nui_initialization">Allow NUI Initialization</string>
    <string name="es_kernel_allow_incompatible_title_update">Allow Incompatible Title Update</string>
    <string name="es_kernel_apply_title_update">Apply Title Updates</string>
    <string name="es_kernel_cl">Command Line Arguments</string>
    <string name="es_kernel_default_achievements_backend">Achievements Backend</string>
    <string name="es_kernel_ignore_thread_affinities">Ignore Thread Affinities</string>
</resources>