<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_refresh_list"
        android:title="@string/refresh_list"/>
    <item
        android:id="@+id/menu_set_game_dir"
        android:title="@string/set_game_dir"/>
    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings"/>
    <item
        android:id="@+id/menu_key_mappers"
        android:title="@string/key_mappers"/>

    <item
        android:id="@+id/menu_virtual_pad_edit"
        android:title="@string/virtual_pad_edit"/>
    <item
        android:id="@+id/menu_open_file_mgr"
        android:title="@string/open_file_manager"/>

    <item
        android:id="@+id/menu_about"
        android:title="@string/about"/>
</menu>