<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <Button
        android:id="@+id/gratitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gratitude"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"/>


    <Button
        android:id="@+id/update_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_log"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

    <Button
        android:id="@+id/open_source_licenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_source_licenses"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@id/open_source_licenses"
    android:layout_below="@id/toolbar">
    <TextView
        android:id="@+id/about_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</ScrollView>
</RelativeLayout>